# CTI-Engine

./: .dockerignore  .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  requirements.txt
DataBaseTest/: IDENTITY  LOG  LOG.old.1710606452143232  LOG.old.1710606534839410  LOG.old.1710606568889779  LOG.old.1710606635294081  LOG.old.1710606668311371  LOG.old.1710606724778496  LOG.old.1710606740439980  LOG.old.1710606765631369  LOG.old.1710606883332514
config/: ConfigFile.json
projects/CTI_ENGINE_SAVE 1706865831 1706865837/: CTI_ENGINE_SAVE 1706865831 1706865837.json
projects/CTI_ENGINE_SAVE 69 1706886766/: CTI_ENGINE_SAVE 69 1706886766.json
saves/CTI_ENGINE_SAVE 1706886701 1706886705/: CTI_ENGINE_SAVE 1706886701 1706886705.json
saves/CTI_ENGINE_SAVE 69 1706863429/: CTI_ENGINE_SAVE 69 1706863429.json
saves/CTI_ENGINE_SAVE 69 1706886699/: CTI_ENGINE_SAVE 69 1706886699.json
saves/CTI_ENGINE_SAVE armarx 2024-02-05/: CTI_ENGINE_SAVE armarx 2024-02-05.json
simox_2024-03-21/: simox_2024-03-21.json
src/: __main__.py  __main__old.py
src/app/: App.py  AppOld.py  Configuration.py  FetcherCountConfiguration.py  PassiveThreadTest.py  SecondApp.py
src/builder/: BuilderInterface.py
src/exceptions/: CFileNotFoundError.py  CompileCommandError.py  ProjectNotFoundException.py  SemaphoreNotFoundException.py
src/fetcher/: FetcherInterface.py
src/model/: DataBaseEntry.py  Model.py  ModelReadViewInterface.py
src/saving/: SaveInterface.py  SaveToCSV.py  SaveToDatabase.py  SaveToJSON.py
src/view/: AppRequestsInterface.py  CommandLineUI.py  UIInterface.py
(+189 files in other folders)
