[tool.poetry]
name = "CTI Engine"
version = "1.0.0"
authors = [
    "Jannik Brentel <uyioc@student.kit.edu",
    "Marie Schneider <udixi@student.kit.edu>",
    "Sebastian Sauer <sebastian.sauer@student.kit.edu>",
    "Caspar von Heusinger <uvhuj@student.kit.edu>",
    "Katarina Toroman <upufw@student.kit.edu>"
]
readme = "README.md"

[tool.poetry.dependencies]
PyQt5 = "~=5.15.7"
typeguard = "~=2.13.3"
numpy = "~=1.24.1"
matplotlib = "~=3.6.3"

